--- a/package.json
+++ b/package.json
@@ -1,45 +1,46 @@
 {
-	"name": "com.plainlyvideos.ae-plugin",
-	"private": true,
-	"version": "0.0.0",
-	"type": "module",
-	"scripts": {
-		"dev": "vite",
-		"build": "tsc -b && vite build && webpack --mode production",
-		"lint": "eslint .",
-		"preview": "vite preview"
-	},
-	"dependencies": {
-		"@headlessui/react": "^2.2.0",
-		"@heroicons/react": "^2.1.5",
-		"@tanstack/react-router": "^1.82.1",
-		"archiver": "^7.0.1",
-		"classnames": "^2.5.1",
-		"lucide-react": "^0.456.0",
-		"react": "^18.3.1",
-		"react-dom": "^18.3.1",
-		"react-hooks-global-state": "^2.1.0",
-		"types-for-adobe": "^7.2.0"
-	},
-	"devDependencies": {
-		"@biomejs/biome": "1.9.4",
-		"@tailwindcss/forms": "^0.5.9",
-		"@tailwindcss/typography": "^0.5.15",
-		"@tanstack/router-devtools": "^1.82.1",
-		"@tanstack/router-plugin": "^1.81.9",
-		"@types/node": "^20.17.6",
-		"@types/react": "^18.3.12",
-		"@types/react-dom": "^18.3.1",
-		"@vitejs/plugin-react": "^4.3.3",
-		"autoprefixer": "^10.4.20",
-		"globals": "^15.11.0",
-		"postcss": "^8.4.49",
-		"tailwindcss": "^3.4.15",
-		"typescript": "~5.6.2",
-		"typescript-eslint": "^8.11.0",
-		"vite": "^5.4.10",
-		"webpack": "^5.94.0",
-		"webpack-cli": "^5.1.4",
-		"webpack-es3-plugin": "^1.5.2"
-	}
+  "name": "com.plainlyvideos.ae-plugin",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc -b && vite build && webpack --mode production",
+    "biome": "biome check ./src",
+    "biome-write": "biome check --write ./src",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.1.5",
+    "@tanstack/react-router": "^1.82.1",
+    "archiver": "^7.0.1",
+    "classnames": "^2.5.1",
+    "lucide-react": "^0.456.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-hooks-global-state": "^2.1.0",
+    "types-for-adobe": "^7.2.0"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "1.9.4",
+    "@tailwindcss/forms": "^0.5.9",
+    "@tailwindcss/typography": "^0.5.15",
+    "@tanstack/router-devtools": "^1.82.1",
+    "@tanstack/router-plugin": "^1.81.9",
+    "@types/node": "^20.17.6",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "@vitejs/plugin-react": "^4.3.3",
+    "autoprefixer": "^10.4.20",
+    "globals": "^15.11.0",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15",
+    "typescript": "~5.6.2",
+    "typescript-eslint": "^8.11.0",
+    "vite": "^5.4.10",
+    "webpack": "^5.94.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-es3-plugin": "^1.5.2"
+  }
 }
