--- a/.github/workflow/ci.yml
+++ b/.github/workflow/ci.yml
@@ -12,19 +12,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Use Node.js
-        uses: actions/setup-node@v4
+        - uses: actions/checkout@v4
+        - uses: actions/setup-node@v4
         with:
-          node-version: '20.x'
+          node-version: '20.11.1'
+          cache: 'yarn'
 
       - name: Install dependencies
-        run: npm ci
+        run: yarn install --frozen-lockfile
 
       - name: Run biome check
-        run: npm run biome
+        run: yarn run biome
 
   build:
     name: Run build
@@ -32,14 +30,14 @@ jobs:
     needs: biome-check
 
     steps:
-      - uses: actions/checkout@v4
-      - name: Use Node.js
-        uses: actions/setup-node@v4
+        - uses: actions/checkout@v4
+        - uses: actions/setup-node@v4
         with:
-          node-version: '20.x'
+          node-version: '20.11.1'
+          cache: 'yarn'
 
       - name: Install dependencies
-        run: npm ci
+        run: yarn install --frozen-lockfile
 
       - name: Run build
-        run: npm run build
+        run: yarn run build
