--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "NODE_ENV=development node ./script/updateManifest.cjs --dev && vite build --mode development --watch",
-    "build-test": "NODE_ENV=test node ./script/updateManifest.cjs --test && tsc -b && vite build --mode test && webpack --env test --mode none",
+    "build-test": "NODE_ENV=test node ./script/updateManifest.cjs && tsc -b && vite build && webpack --mode production",
     "build": "NODE_ENV=production node ./script/updateManifest.cjs && tsc -b && vite build && webpack --mode production",
     "biome": "biome check ./src",
     "biome-write": "biome check --write ./src",
