More PR fixes - Change manifest size - fix README.md - Fix Notification - Fix exporting and zipping / remove useEffect - Fix scrollbar - Take lib from CEP.12 - Write README.md for lib files - Additional small comment fixes

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -21,5 +21,5 @@
     "types": ["@types/node"]
   },
   "include": ["vite.config.ts"],
-  "exclude": ["./src/lib/CEPEngine_extensions.js"]
+  "exclude": ["./src/lib/**"]
 }
