--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,7 @@
   },
   "files": {
     "ignoreUnknown": false,
-    "ignore": ["./src/lib/**", "./src/routeTree.gen.ts"]
+    "ignore": ["./src/lib/**"]
   },
   "formatter": {
     "enabled": true,
