Make plugin CSXS11 compatible

--- a/biome.json
+++ b/biome.json
@@ -21,7 +21,8 @@
     "rules": {
       "recommended": true,
       "style": {
-        "noNonNullAssertion": "off"
+        "noNonNullAssertion": "off",
+        "useNodejsImportProtocol": "off"
       }
     },
     "ignore": ["./src/jsx/**"]
