--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-	"cSpell.words": ["plainlyvideos"],
-	"editor.defaultFormatter": "biomejs.biome"
+  "cSpell.words": ["plainlyvideos", "aescripts"],
+  "editor.defaultFormatter": "biomejs.biome"
 }
