--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
     branches: [ master ]
 
 jobs:
-  biome-check:
+  biome-check-aescripts:
     name: Run biome check
     runs-on: ubuntu-latest
 
@@ -19,15 +19,17 @@ jobs:
           cache: 'yarn'
 
       - name: Install dependencies
-        run: yarn install --frozen-lockfile
+        run: |
+          cd plainly-aescripts
+          yarn install --frozen-lockfile
 
       - name: Run biome check
-        run: yarn run biome
+        run: yarn biome
 
-  build:
+  build-aescripts:
     name: Run build
     runs-on: ubuntu-latest
-    needs: biome-check
+    needs: biome-check-aescripts
 
     steps:
       - uses: actions/checkout@v4
@@ -37,7 +39,49 @@ jobs:
           cache: 'yarn'
 
       - name: Install dependencies
-        run: yarn install --frozen-lockfile
+        run: |
+          cd plainly-aescripts
+          yarn install --frozen-lockfile
+
+      - name: Run build
+        run: yarn run build
+
+  biome-check-plugin:
+    name: Run biome check
+    runs-on: ubuntu-latest
+    needs: build-aescripts
+
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '20.11.1'
+          cache: 'yarn'
+
+      - name: Install dependencies
+        run: |
+          cd plainly-plugin
+          yarn install --frozen-lockfile
+
+      - name: Run biome check
+        run: yarn biome
+
+  build-plugin:
+    name: Run build
+    runs-on: ubuntu-latest
+    needs: biome-check-plugin
+
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '20.11.1'
+          cache: 'yarn'
+
+      - name: Install dependencies
+        run: |
+          cd plainly-plugin
+          yarn install --frozen-lockfile
 
       - name: Run build
         run: yarn run build
