--- a/package.json
+++ b/package.json
@@ -1,45 +1,12 @@
 {
   "name": "com.plainlyvideos.after-effects-plugin",
-  "private": true,
   "version": "1.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "NODE_ENV=development node ./script/updateManifest.cjs --dev && vite build --mode development --watch",
-    "build-test": "NODE_ENV=test node ./script/updateManifest.cjs && tsc -b && vite build",
-    "build": "NODE_ENV=production node ./script/updateManifest.cjs && tsc -b && vite build",
-    "package": "tsc -b && vite build --mode package && node ./script/updateManifest.cjs --package",
-    "biome": "biome check ./src",
-    "biome-write": "biome check --write ./src",
-    "preview": "vite preview"
+    "prepare-aescripts": "cd plainly-aescripts && yarn install && yarn build",
+    "prepare-plugin": "cd plainly-plugin && yarn install && yarn build",
+    "package": "rm -rf package && yarn prepare-aescripts && yarn prepare-plugin && node ./scripts/preparePackage.cjs"
   },
   "dependencies": {
-    "@headlessui/react": "^2.2.0",
-    "@heroicons/react": "^2.1.5",
-    "archiver": "^5.3.2",
-    "classnames": "^2.5.1",
-    "lucide-react": "^0.456.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-hooks-global-state": "^2.1.0",
-    "types-for-adobe": "^7.2.0"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "1.9.4",
-    "@tailwindcss/forms": "^0.5.9",
-    "@tailwindcss/typography": "^0.5.15",
-    "@types/node": "^20.17.6",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "@vitejs/plugin-react": "^4.3.3",
-    "autoprefixer": "^10.4.20",
-    "globals": "^15.11.0",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.15",
-    "typescript": "~5.6.2",
-    "vite": "^5.4.10",
-    "vite-plugin-static-copy": "^2.1.0",
-    "webpack": "^5.94.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-es3-plugin": "^1.5.2"
+    "archiver": "^5.3.2"
   }
 }
