--- a/plainly-plugin/tsconfig.app.json
+++ b/plainly-plugin/tsconfig.app.json
@@ -22,5 +22,5 @@
     "noUncheckedSideEffectImports": true
   },
   "include": ["src"],
-  "exclude": ["./src/lib/**"]
+  "exclude": ["src/lib/**"]
 }
