--- a/plainly-plugin/tsconfig.node.json
+++ b/plainly-plugin/tsconfig.node.json
@@ -21,5 +21,5 @@
     "types": ["@types/node"]
   },
   "include": ["vite.config.ts"],
-  "exclude": ["./src/lib/**"]
+  "exclude": ["src/lib/**"]
 }
