--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,7 @@ jobs:
         with:
           node-version: '20.11.1'
           cache: 'yarn'
+          cache-dependency-path: 'plainly-aescripts/yarn.lock'
 
       - name: Run Biome check
         working-directory: plainly-aescripts
@@ -41,6 +42,7 @@ jobs:
         with:
           node-version: '20.11.1'
           cache: 'yarn'
+          cache-dependency-path: 'plainly-aescripts/yarn.lock'
 
       - name: Run build
         working-directory: plainly-aescripts
@@ -61,6 +63,7 @@ jobs:
         with:
           node-version: '20.11.1'
           cache: 'yarn'
+          cache-dependency-path: 'plainly-plugin/yarn.lock'
 
       - name: Run Biome check
         working-directory: plainly-plugin
@@ -82,6 +85,7 @@ jobs:
         with:
           node-version: '20.11.1'
           cache: 'yarn'
+          cache-dependency-path: 'plainly-plugin/yarn.lock'
 
       - name: Run build
         working-directory: plainly-plugin
