--- a/plainly-plugin/package.json
+++ b/plainly-plugin/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "clean": "rm -rf dist",
     "dev": "yarn clean && NODE_ENV=development node ./../scripts/updateManifest.cjs --dev && NODE_ENV=development webpack --mode development --watch",
-    "build-test": "yarn clean && NODE_ENV=test node ./../scripts/updateManifest.cjs && NODE_ENV=test webpack --mode production",
+    "build-test": "yarn clean && NODE_ENV=production node ./../scripts/updateManifest.cjs && NODE_ENV=test webpack --mode production",
     "build": "yarn clean && NODE_ENV=production node ./../scripts/updateManifest.cjs && NODE_ENV=production webpack --mode production",
     "biome": "biome check ./src",
     "biome-write": "biome check --write ./src"
