--- a/plainly-plugin/.env.development
+++ b/plainly-plugin/.env.development
@@ -1,4 +1,3 @@
 PLUGIN_ENV=development
 PLUGIN_BUNDLE_VERSION=1.0.0
-PLAINLY_API_BASE_URL=localhost
-PLAINLY_API_PORT=8080
+PLAINLY_API_BASE_URL=http://localhost:8080
