--- a/plainly-plugin/.env.production
+++ b/plainly-plugin/.env.production
@@ -1,3 +1,3 @@
 PLUGIN_ENV=production
 PLUGIN_BUNDLE_VERSION=1.0.0
-PLAINLY_API_BASE_URL=api.plainlyvideos.com
+PLAINLY_API_BASE_URL=https://api.plainlyvideos.com
