--- a/plainly-plugin/package.json
+++ b/plainly-plugin/package.json
@@ -16,7 +16,9 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.1.5",
     "archiver": "^5.3.2",
+    "axios": "^1.7.9",
     "classnames": "^2.5.1",
+    "form-data": "^4.0.1",
     "lucide-react": "^0.456.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
