--- a/plainly-aescripts/tsconfig.json
+++ b/plainly-aescripts/tsconfig.json
@@ -9,6 +9,7 @@
     "ignoreDeprecations": "5.0",
     "experimentalDecorators": true,
     "allowJs": true,
+    "strict": true,
     "types": ["./node_modules/types-for-adobe/AfterEffects/22.0", "@types/node"]
   },
   "include": ["src/**/*.ts", "index.d.ts"]
