--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-  "cSpell.words": ["plainlyvideos", "aescripts"],
+  "cSpell.words": ["plainlyvideos", "aescripts", "mdata"],
   "editor.defaultFormatter": "biomejs.biome"
 }
