--- a/plainly-plugin/package.json
+++ b/plainly-plugin/package.json
@@ -49,7 +49,6 @@
     "ts-loader": "^9.5.1",
     "typescript": "~5.6.2",
     "webpack": "^5.97.1",
-    "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.2.0"
+    "webpack-cli": "^6.0.1"
   }
 }
