PR fixes - project.ts Return error; Properly return projectData; - Small UI changes to Button.tsx and Alert.tsx - Don't allow UploadForm to be visible, until there is apiKey.key available and decrypted - Reduce AuthProvider code - Add MissingApiKey.tsx component to render when key is missing - Auto focus PinInput inside PinOverlay - Check for entire apiKey in SettingsForm - Revert clearNotification

--- a/biome.json
+++ b/biome.json
@@ -28,6 +28,9 @@
       "style": {
         "noNonNullAssertion": "off",
         "useNodejsImportProtocol": "off"
+      },
+      "correctness": {
+        "noUnusedImports": "error"
       }
     }
   },
