Move NotificationsOverlay to MainWrapper

--- a/plainly-plugin/tsconfig.json
+++ b/plainly-plugin/tsconfig.json
@@ -6,8 +6,9 @@
     "esModuleInterop": true,
     "jsx": "react-jsx",
     "strict": true,
+    "baseUrl": ".",
     "paths": {
-      "@src/*": ["./src/*"]
+      "@src/*": ["src/*"]
     }
   },
   "include": ["src", "index.d.ts"],
