closes #8 , relates to #9: Upload / edit project (#27)
Co-authored-by: Ivan Senic <ivan@plainlyvideos.com>

--- a/biome.json
+++ b/biome.json
@@ -28,6 +28,12 @@
       "style": {
         "noNonNullAssertion": "off",
         "useNodejsImportProtocol": "off"
+      },
+      "a11y": {
+        "noAutofocus": "off"
+      },
+      "correctness": {
+        "noUnusedImports": "error"
       }
     }
   },
