--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,6 @@ jobs:
   # call workflow to sign the plugin first
   sign_plugin:
     name: Sign Plugin
-    runs-on: macos-latest
     uses: ./.github/workflows/sign-extension.yml
     secrets: inherit
 
@@ -37,7 +36,9 @@ jobs:
   upload_artifact_to_release:
     name: Upload Signed Plugin to Release
     runs-on: ubuntu-latest
-    needs: sign_plugin
+    needs: 
+      - sign_plugin
+      - create_release
     steps:
       - name: Download Signed Plugin Artifact
         uses: actions/download-artifact@v3
