--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,45 +13,24 @@ jobs:
     uses: ./.github/workflows/sign-extension.yml
     secrets: inherit
 
-  # create release then, save upload url as output
+  # create release then
   create_release:
     name: Create GitHub Release
     runs-on: ubuntu-latest
     needs: sign_plugin
-    outputs:
-      release_upload_url: ${{ steps.create_release.outputs.upload_url }}
-    steps:
-      - name: Create a Release
-        id: create_release
-        uses: actions/create-release@v1
-        with:
-          tag_name: ${{ github.ref_name }}
-          release_name: ${{ github.ref_name }}
-          draft: false
-          prerelease: false
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-  # then upload the signed plugin to the release
-  upload_artifact_to_release:
-    name: Upload Signed Plugin to Release
-    runs-on: ubuntu-latest
-    needs: 
-      - sign_plugin
-      - create_release
+ 
     steps:
       - name: Download Signed Plugin Artifact
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: plainly-plugin
           path: .
 
-      - name: Upload ZXP to the Release
-        uses: actions/upload-release-asset@v1
+      - name: Create a Release
+        uses: softprops/action-gh-release@v2
         with:
-          upload_url: ${{ needs.create_release.outputs.release_upload_url }}
-          asset_path: ./plainly-plugin.zxp
-          asset_name: plainly-plugin.zxp
-          asset_content_type: application/octet-stream
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          draft: false
+          prerelease: false
+          files: |
+            plainly-plugin.zxp
+
