--- a/plainly-plugin/.env.development
+++ b/plainly-plugin/.env.development
@@ -1,3 +1,4 @@
 PLUGIN_ENV=development
 PLUGIN_BUNDLE_VERSION=1.1.0
 PLAINLY_API_BASE_URL=http://localhost:8080
+PLAINLY_PLATFORM_BASE_URL=http://localhost:3000
