--- a/plainly-plugin/.env.test
+++ b/plainly-plugin/.env.test
@@ -1,3 +1,4 @@
 PLUGIN_ENV=test
 PLUGIN_BUNDLE_VERSION=1.1.0
 PLAINLY_API_BASE_URL=https://api.test.plainlyvideos.com
+PLAINLY_PLATFORM_BASE_URL=https://app.test.plainlyvideos.com
