--- a/plainly-plugin/package.json
+++ b/plainly-plugin/package.json
@@ -19,6 +19,7 @@
     "archiver": "^5.3.2",
     "axios": "^1.7.9",
     "classnames": "^2.5.1",
+    "date-fns": "^4.1.0",
     "form-data": "^4.0.1",
     "lucide-react": "^0.456.0",
     "react": "^18.3.1",
