--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
     "prepare-aescripts": "cd plainly-aescripts && yarn install && yarn build",
     "prepare-plugin": "cd plainly-plugin && yarn install && yarn build",
     "package": "rm -rf package && yarn prepare-aescripts && yarn prepare-plugin && node ./scripts/preparePackage.cjs",
-    "prepare": "rm -rf package && node ./scripts/preparePackage.cjs"
+    "prepare": "rm -rf package && node ./scripts/preparePackage.cjs",
+    "postinstall": "husky",
+    "husky-check": "cd plainly-aescripts && yarn biome && cd .. && cd plainly-plugin && yarn biome"
+  },
+  "devDependencies": {
+    "husky": "^9.1.7"
   }
 }
