--- a/plainly-plugin/package.json
+++ b/plainly-plugin/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.1.5",
+    "@octokit/types": "^13.8.0",
     "@tanstack/react-query": "^5.66.0",
     "archiver": "^5.3.2",
     "axios": "^1.7.9",
