Set packageManager version

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,28 @@ package
 *.njsproj
 *.sln
 *.sw?
+
+# yarn
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+
+plainly-aescripts/.pnp.*
+plainly-aescripts/.yarn/*
+plainly-aescripts/!.yarn/patches
+plainly-aescripts/!.yarn/plugins
+plainly-aescripts/!.yarn/releases
+plainly-aescripts/!.yarn/sdks
+plainly-aescripts/!.yarn/versions
+
+plainly-plugin/.pnp.*
+plainly-plugin/.yarn/*
+plainly-plugin/!.yarn/patches
+plainly-plugin/!.yarn/plugins
+plainly-plugin/!.yarn/releases
+plainly-plugin/!.yarn/sdks
+plainly-plugin/!.yarn/versions
