--- a/plainly-aescripts/package.json
+++ b/plainly-aescripts/package.json
@@ -23,5 +23,6 @@
     "typescript": "^5.7.2",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1"
-  }
+  },
+  "packageManager": "yarn@3.8.7"
 }
