--- a/package.json
+++ b/package.json
@@ -3,15 +3,16 @@
   "version": "1.2.6",
   "author": "Plainly Videos",
   "scripts": {
-    "build": "yarn --cwd ./plainly-aescripts/ build && yarn --cwd ./plainly-plugin/ build",
+    "build": "cd plainly-aescripts && yarn build && cd ../plainly-plugin && yarn build",
     "prepare-aescripts": "cd plainly-aescripts && yarn install && yarn build",
     "prepare-plugin": "cd plainly-plugin && yarn install && yarn build",
     "package": "rm -rf package && yarn prepare-aescripts && yarn prepare-plugin && node ./scripts/preparePackage.cjs",
     "prepare": "rm -rf package && node ./scripts/preparePackage.cjs",
     "postinstall": "husky",
-    "husky-check": "yarn --cwd ./plainly-aescripts/ biome && yarn --cwd ./plainly-plugin/ biome"
+    "husky-check": "cd plainly-aescripts && yarn biome && cd ../plainly-plugin && yarn biome"
   },
   "devDependencies": {
     "husky": "^9.1.7"
-  }
+  },
+  "packageManager": "yarn@3.8.7"
 }
