--- a/plainly-plugin/package.json
+++ b/plainly-plugin/package.json
@@ -52,5 +52,6 @@
     "typescript": "~5.6.2",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1"
-  }
+  },
+  "packageManager": "yarn@3.8.7"
 }
