--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,10 @@ jobs:
           cache: 'yarn'
           cache-dependency-path: 'plainly-aescripts/yarn.lock'
 
+      - name: Enable Corepack
+        run: |
+          corepack enable
+
       - name: Run Biome check
         working-directory: plainly-aescripts
         run: |
@@ -44,6 +48,10 @@ jobs:
           cache: 'yarn'
           cache-dependency-path: 'plainly-aescripts/yarn.lock'
 
+      - name: Enable Corepack
+        run: |
+          corepack enable
+
       - name: Run build
         working-directory: plainly-aescripts
         run: |
@@ -64,6 +72,10 @@ jobs:
           node-version: '20.11.1'
           cache: 'yarn'
           cache-dependency-path: 'plainly-plugin/yarn.lock'
+
+      - name: Enable Corepack
+        run: |
+          corepack enable
 
       - name: Run Biome check
         working-directory: plainly-plugin
@@ -86,6 +98,10 @@ jobs:
           node-version: '20.11.1'
           cache: 'yarn'
           cache-dependency-path: 'plainly-plugin/yarn.lock'
+
+      - name: Enable Corepack
+        run: |
+          corepack enable
 
       - name: Run build
         working-directory: plainly-plugin
