--- a/.gitignore
+++ b/.gitignore
@@ -35,16 +35,16 @@ package
 
 plainly-aescripts/.pnp.*
 plainly-aescripts/.yarn/*
-plainly-aescripts/!.yarn/patches
-plainly-aescripts/!.yarn/plugins
-plainly-aescripts/!.yarn/releases
-plainly-aescripts/!.yarn/sdks
-plainly-aescripts/!.yarn/versions
+!plainly-aescripts/.yarn/patches
+!plainly-aescripts/.yarn/plugins
+!plainly-aescripts/.yarn/releases
+!plainly-aescripts/.yarn/sdks
+!plainly-aescripts/.yarn/versions
 
 plainly-plugin/.pnp.*
 plainly-plugin/.yarn/*
-plainly-plugin/!.yarn/patches
-plainly-plugin/!.yarn/plugins
-plainly-plugin/!.yarn/releases
-plainly-plugin/!.yarn/sdks
-plainly-plugin/!.yarn/versions
+!plainly-plugin/.yarn/patches
+!plainly-plugin/.yarn/plugins
+!plainly-plugin/.yarn/releases
+!plainly-plugin/.yarn/sdks
+!plainly-plugin/.yarn/versions
