--- a/plainly-plugin/package.json
+++ b/plainly-plugin/package.json
@@ -5,10 +5,10 @@
   "author": "Plainly Videos",
   "license": "Apache-2.0",
   "scripts": {
-    "clean": "rm -rf dist",
-    "dev": "yarn clean && NODE_ENV=development node ./../scripts/updateManifest.cjs --dev && NODE_ENV=development webpack --mode development --watch",
-    "build-test": "yarn clean && NODE_ENV=production node ./../scripts/updateManifest.cjs && NODE_ENV=test webpack --mode production",
-    "build": "yarn clean && NODE_ENV=production node ./../scripts/updateManifest.cjs && NODE_ENV=production webpack --mode production",
+    "clean": "rimraf dist",
+    "dev": "yarn clean && cross-env NODE_ENV=development && node ./../scripts/updateManifest.cjs --dev && cross-env NODE_ENV=development && webpack --mode development --watch",
+    "build-test": "yarn clean && cross-env NODE_ENV=production && node ./../scripts/updateManifest.cjs && cross-env NODE_ENV=test && webpack --mode production",
+    "build": "yarn clean && cross-env NODE_ENV=production && node ./../scripts/updateManifest.cjs && cross-env NODE_ENV=production && webpack --mode production",
     "biome": "biome check ./src",
     "biome-write": "biome check --write ./src"
   },
@@ -40,12 +40,14 @@
     "@types/react-dom": "^18.3.1",
     "autoprefixer": "^10.4.20",
     "babel-loader": "^9.2.1",
+    "cross-env": "^10.0.0",
     "css-loader": "^7.1.2",
     "dotenv-webpack": "^8.1.0",
     "globals": "^15.11.0",
     "html-webpack-plugin": "^5.6.3",
     "postcss": "^8.4.49",
     "postcss-loader": "^8.1.1",
+    "rimraf": "^6.0.1",
     "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.15",
     "ts-loader": "^9.5.1",
