--- a/.github/workflows/sign-extension.yml
+++ b/.github/workflows/sign-extension.yml
@@ -19,13 +19,13 @@ jobs:
       - name: Prepare plainly-aescripts
         working-directory: plainly-aescripts
         run: |
-          yarn install --frozen-lockfile
+          yarn install --immutable
           yarn build
 
       - name: Prepare plainly-plugin
         working-directory: plainly-plugin
         run: |
-          yarn install --frozen-lockfile
+          yarn install --immutable
           yarn build
 
       - name: Prepare package for signing
