--- a/.github/workflows/sign-extension.yml
+++ b/.github/workflows/sign-extension.yml
@@ -11,10 +11,13 @@ jobs:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v4
-
       - uses: actions/setup-node@v4
         with:
           node-version: '20.11.1'
+
+      - name: Install root dependencies
+        run: |
+          yarn install --immutable
 
       - name: Prepare plainly-aescripts
         working-directory: plainly-aescripts
